6.0.8
  15-01-14
  Bugfix
  * #i0005: HfS Backend Layout Default: Row was missing

6.0.3
  14-12-30
  Improvement
  * #i0004: BAT: Back from 10 columns to 12 columns
  * #i0003: HfS: Back from 10 columns to 12 columns

6.0.2
  14-12-12
  Bugfix
  * #i0002: CSS for foundation

6.0.1
  14-12-11
  Bugfix
  * #i0001: remove "return;" in ext_localconf.php

6.0.0
  14-12-06
  Major Feature
  * #63630: Fluid Template

3.0.1
  13-01-19
  Bugfix
  * #44660: include static template paths without ending slash
            Effected files:
            * ext_tables.php

3.0.0
  12-12-09
  New Feature
  * #43823: TypoScript snippets for HTML templates
            Effected files:
            * res/html/org/_default/main.tmpl         (new)
            * res/html/org/_default/margin.tmpl       (new)
            * res/html/org/department                 (removed 2x)
            * res/html/org/headquarters               (removed 2x)
            * res/html/org/location                   (removed 2x)
            * res/html/org/news/201/default.tmpl      (removed)
            * res/html/org/news/211/default.tmpl      (removed)
            * res/html/org/news/401/default.tmpl      (removed)
            * res/html/org/news/411/default.tmpl      (removed)
            * res/html/org/staff
            * static/org/department/601/setup.txt
            * static/org/department/611/setup.txt
            * static/org/headquarters/501/setup.txt
            * static/org/headquarters/511/setup.txt
            * static/org/location/701/setup.txt
            * static/org/location/710                 (removed)
            * static/org/calendar/201/setup.txt
            * static/org/calendar/211/setup.txt
            * static/org/news/401/setup.txt
            * static/org/news/411/setup.txt
            * static/org/staff/101/setup.txt
            * static/org/staff/111/setup.txt
  Improvements
  * #00000: Move version from 0.4.9 to 3.0.0
            3.0.0 corresponds with the Organiser version

0.4.9